# cross-sums

./: .bazelrc  .gitignore  Architecture.md  CLAUDE.md  CrossSumsMac.xctestplan  CrossSumsSimple_AppStore.mobileprovision  README.md  Simple Cross Sums.xctestplan  Tasks.md  WORKSPACE  bazel-bin  bazel-cross-sums  bazel-out  exportOptions.plist
.claude/: settings.local.json
.github/workflows/: deploy.yml
CrossSums/: CrossSumsApp.swift  Info.plist
CrossSums.xcodeproj/: project.pbxproj
CrossSums.xcodeproj/project.xcworkspace/xcuserdata/stephenreitz.xcuserdatad/: UserInterfaceState.xcuserstate
CrossSums.xcodeproj/xcuserdata/stephenreitz.xcuserdatad/xcschemes/: xcschememanagement.plist
CrossSums/Model/: GameState.swift  PlayerProfile.swift  Puzzle.swift
CrossSums/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
CrossSums/Resources/Assets.xcassets/CellRemoved.colorset/: Contents.json
CrossSums/Resources/Assets.xcassets/CellUnmarked.colorset/: Contents.json
CrossSums/Resources/Assets.xcassets/Gemini_Generated_Image_1kcjs51kcjs51kcj.imageset/: Contents.json
CrossSums/Resources/Assets.xcassets/Icons/RestartIcon.imageset/: Contents.json
CrossSums/Resources/Puzzles/: puzzles.json
CrossSums/Services/: PersistenceService.swift  PuzzleGenerator.swift  PuzzleService.swift
CrossSums/View/Game/: ControlsView.swift  GameView.swift  GridView.swift
CrossSums/View/MainMenu/: MainMenuView.swift
CrossSums/View/Popups/: LevelCompleteView.swift
CrossSums/View/Reusable/: PuzzleCellView.swift
CrossSums/ViewModel/: GameViewModel.swift
CrossSumsMac/: AppDelegate.swift  CrossSumsMacApp.swift  GameScene.swift  GameViewController.swift
CrossSumsMac/Views/: MacGameView.swift  MacMainMenuView.swift
CrossSumsMacTests/: CrossSumsMacTests.swift
CrossSumsMacUITests/: CrossSumsMacUITests.swift  CrossSumsMacUITestsLaunchTests.swift
CrossSumsSimple/: BUILD.bazel  CrossSumsSimpleApp.swift  Info.plist
CrossSumsSimple.xcodeproj/: project.pbxproj
CrossSumsSimple.xcodeproj/xcshareddata/xcschemes/: CrossSumsMac.xcscheme  Simple Cross Sums.xcscheme
CrossSumsSimple/Model/: GameState.swift  PlayerProfile.swift  Puzzle.swift
CrossSumsSimple/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
CrossSumsSimple/Resources/Assets.xcassets/CellKept.colorset/: Contents.json
CrossSumsSimple/Resources/Assets.xcassets/LaunchScreenBackground.colorset/: Contents.json
CrossSumsSimple/Resources/Assets.xcassets/PrimaryBackground.colorset/: Contents.json
CrossSumsSimple/Services/: AchievementTracker.swift  DailyPuzzleService.swift  GameCenterManager.swift  PersistenceService.swift  PuzzleGenerator.swift  PuzzleService.swift  ShareResultsService.swift
CrossSumsSimple/View/Game/: ControlsView.swift  GameView.swift  GridView.swift  HUDView.swift
CrossSumsSimple/View/MainMenu/: DailyPuzzleCardView.swift  MainMenuView.swift  MainMenuView_OLD.swift
CrossSumsSimple/View/Popups/: HelpView.swift  LevelCompleteView.swift  ShareSheet.swift
CrossSumsSimple/View/Reusable/: PuzzleCellView.swift
CrossSumsSimple/ViewModel/: GameViewModel.swift
CrossSumsTests/: CrossSumsTests.swift  GameViewModelTests.swift  PersistenceServiceTests.swift  PuzzleGenerationValidationTests.swift.bak  PuzzleServiceTests.swift
CrossSumsUITests/: AppStoreScreenshotTests.swift  CrossSumsUITests.swift  CrossSumsUITestsLaunchTests.swift
Scripts/: extract_screenshots.sh  generate_screenshots.sh  test_screenshot.sh
fastlane/: Appfile  Fastfile  Gemfile  README.md
