# CrossSumsSimple/BUILD.bazel

load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")

# This rule defines the final iOS application.
ios_application(
    name = "CrossSumsSimple_ipa",
    bundle_id = "com.crosssums.simple",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["Info.plist"],
    minimum_os_version = "15.0",
    # Add support for simulator builds
    provisioning_profile = None,  # Explicitly set to None for simulator builds
    visibility = ["//visibility:public"],
)