# CrossSumsSimple/BUILD.bazel

load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

# Swift library containing all the source code
swift_library(
    name = "CrossSumsSimple_lib",
    srcs = [
        "CrossSumsSimpleApp.swift",
        "Model/PlayerProfile.swift",
        "Model/Puzzle.swift", 
        "Model/GameState.swift",
        "View/Game/GameView.swift",
        "View/Game/HUDView.swift",
        "View/Game/ControlsView.swift",
        "View/Game/GridView.swift",
        "View/Popups/HelpView.swift",
        "View/Popups/LevelCompleteView.swift",
        "View/MainMenu/MainMenuView.swift",
        "View/Reusable/PuzzleCellView.swift",
        "Services/PuzzleService.swift",
        "Services/AchievementTracker.swift",
        "Services/PersistenceService.swift",
        "Services/GameCenterManager.swift",
        "ViewModel/GameViewModel.swift",
        
    ],
    visibility = ["//visibility:public"],
)

# This rule defines the final iOS application.
ios_application(
    name = "CrossSumsSimple_ipa",
    bundle_id = "com.crosssumssimple.app",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["Info.plist"],
    minimum_os_version = "18.0",
    deps = [":CrossSumsSimple_lib"],
    # Add support for simulator builds
    provisioning_profile = None,  # Explicitly set to None for simulator builds
    visibility = ["//visibility:public"],
)